--- a/package.json
+++ b/package.json
@@ -11,13 +11,9 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
         "bulma": "^0.7.1",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^2.0",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "lodash": "^4.17.5"
     }
 }
