--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "cross-env": "^5.1",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5"
+    },
+    "dependencies": {
+        "watch": "^1.0.2"
     }
 }
