--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@prettier/plugin-php": "^0.9.0",
         "axios": "^0.18",
         "bulma": "^0.7.1",
         "cross-env": "^5.1",
         "laravel-mix": "^2.0",
-        "lodash": "^4.17.5"
+        "lodash": "^4.17.5",
+        "prettier": "^1.14.3",
+        "stylelint": "^9.7.1",
+        "stylelint-config-property-sort-order-smacss": "^4.0.1",
+        "stylelint-config-standard": "^18.2.0"
     }
 }
