--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,18 @@
+# editorconfig.org
+
 root = true
 
 [*]
-charset = utf-8
-end_of_line = lf
-insert_final_newline = true
-indent_style = space
+indent_style = tab
 indent_size = 4
+end_of_line = lf
+charset = utf-8
 trim_trailing_whitespace = true
+insert_final_newline = true
 
-[*.md]
-trim_trailing_whitespace = false
 
-[*.yml]
-indent_size = 2
+[*.php]
+indent_size = 4
+
+[templates/**.php]
+indent_size = 4
