--- a/.editorconfig
+++ b/.editorconfig
@@ -3,16 +3,18 @@
 root = true
 
 [*]
-indent_style = tab
-indent_size = 4
-end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
 
+[*.{md,php}]
+indent_style = tab
+indent_size = 2
 
-[*.php]
-indent_size = 4
+[*.md]
+trim_trailing_whitespace = false
 
-[templates/**.php]
-indent_size = 4
+[*.{blade.php,css,js,json,scss,styl}]
+indent_style = tab
+indent_size = 2
