--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
 		"prod": "npm run production",
 		"production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
 		"prettier": "prettier \"**/*.+(blade.php|php|css|js|scss|json)\"",
-		"format": "npm run prettier -- --write"
+		"format": "npm run prettier -- --write",
+		"precommmit": "lint-staged"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"**/*.+(php|css|js|scss|blade.php)": [
+			"prettier --write",
+			"git add"
+		]
 	},
 	"devDependencies": {
 		"@prettier/plugin-php": "^0.9.0",
 		"axios": "^0.18",
 		"bulma": "^0.7.1",
 		"cross-env": "^5.1",
+		"husky": "^1.1.3",
 		"laravel-mix": "^2.0",
+		"lint-staged": "^8.0.4",
 		"lodash": "^4.17.5",
 		"prettier": "^1.14.3",
 		"stylelint": "^9.7.1",
